k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fineract-ing
  namespace: kazy-prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: public
  tls:
    - hosts: [ "fineract.kazy.co.tz" ]
      secretName: fineract-kazy-tls
  rules:
    - host: fineract.kazy.co.tz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fineract-server
                port:
                  number: 8080
